# ai-companion-runtime

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: alerts.py  asr.py  auth.py  carecircle.py  caretasks.py  contacts.py  devices.py  family_auth.py  households.py  memory.py  platform.py  rate_limiter.py  reminder_api.py  (+6 more)
apps/api/tests/: conftest.py  test_agent_harness_notifications.py  test_agent_runtime.py  test_alerts_api.py  test_analyzer_trace_memory.py  test_asr_api.py  test_auth_role_security.py  test_caretask.py  test_caretask_batch.py  test_caretask_device_projection.py  test_contact_tool.py  test_demo_smoke_scripts.py  test_device_identity.py  test_emotion_engine.py  test_firmware_protocol_contract.py  test_harness_fail_closed.py  test_harness_trace_memory_model.py  test_intent_engine.py  test_latency_bench.py  test_local_stack_contract.py  test_memory_engine.py  test_memory_lifecycle.py  test_memory_tools.py  test_message_evidence.py  test_model_registry.py  test_notification_worker.py  test_operations_contracts.py  test_pgvector_migration.py  test_pi_only_mem0_fc.py  test_platform_readiness.py  test_platform_readiness_api.py  test_product_depth_contracts.py  test_production_care_notification_contracts.py  test_production_failure_contracts.py  test_prompt_injection.py  test_rate_limiter.py  test_reflection_memory_lifecycle.py  test_release_a_household_pilot.py  test_reminder_ack_api.py  test_reminder_persistence.py  (+13 more)
(+247 files in other folders)
